--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@
     padding: 30px;
     max-width: 600px;
     border-radius: 5px;
+    background-color: greenyellow;
 }
 
 input{
@@ -33,6 +34,24 @@ button{
     text-align: center;
 }
 
-ul{
+
+ul li{
     list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    border-radius: 8px;
+    padding: 8px;
 }
+
+.timestamp{
+    color: #888;
+    font-size: 0.8em;
+}
+
+li{
+    margin: 2px;
+}
+
+
